--- a/requirements.txt
+++ b/requirements.txt
@@ -5,11 +5,14 @@ contourpy==1.1.0
 cycler==0.11.0
 filelock==3.9.0
 fonttools==4.40.0
+gpytorch==1.11
 idna==3.4
 install==1.3.5
+jaxtyping==0.2.20
 Jinja2==3.1.2
 joblib==1.3.1
 kiwisolver==1.4.4
+linear-operator==0.5.0
 MarkupSafe==2.1.2
 matplotlib==3.7.2
 mpmath==1.2.1
@@ -32,6 +35,7 @@ torch==2.0.1+cpu
 torchaudio==2.0.2+cpu
 torchvision==0.15.2+cpu
 tqdm==4.65.0
+typeguard==2.13.3
 typing_extensions==4.4.0
 tzdata==2023.3
 urllib3==1.26.13
