--- a/requirements.txt
+++ b/requirements.txt
@@ -1,177 +1,35 @@
-appdirs==1.4.4
-argcomplete==2.0.0
-asttokens==2.0.8
-attrs==22.1.0
-autobahn==21.2.2
-Automat==22.10.0
-ax-platform==0.3.3
-backcall==0.1.0
-Beaker==1.12.1
-beautifulsoup4==4.12.2
-blivet==3.5.0
-blivet-gui==2.4.1
-botorch==0.8.5
-Brlapi==0.8.4
-Brotli==1.0.9
-cairocffi==1.3.0
-certifi==2021.10.8
-cffi==1.15.1
-cftime==1.6.1
-chardet==5.1.0
-charset-normalizer==2.1.0
-click==8.1.3
-comm==0.1.3
-constantly==15.1.0
-contourpy==1.0.7
-cryptography==37.0.2
-cssselect==1.1.0
-cupshelpers==1.0
+about-time==4.2.1
+alive-progress==3.1.4
+autograd==1.6.2
+cma==3.2.2
+contourpy==1.1.0
 cycler==0.11.0
-Cython==0.29.32
-dasbus==1.6
-dbus-python==1.3.2
-debugpy==1.6.7
-decorator==5.1.1
-distro==1.7.0
-evdev==1.6.0
-executing==1.1.1
-fb-re2==1.0.7
-fedora-third-party==0.10
-file-magic==0.4.0
-filelock==3.9.0
-fonttools==4.37.2
-fros==1.1
-fs==2.4.11
-gpg==1.17.0
-gpytorch==1.10
-humanize==3.13.1
-hyperlink==21.0.0
-idna==3.3
-incremental==22.10.0
-ipykernel==6.24.0
-ipython==8.5.0
-ipywidgets==8.0.7
-jaxtyping==0.2.20
-jedi==0.18.1
-Jinja2==3.1.2
-joblib==1.3.1
-jupyter_client==8.3.0
-jupyter_core==5.3.1
-jupyterlab-widgets==3.0.8
+Deprecated==1.2.14
+dill==0.3.7
+fonttools==4.42.1
+future==0.18.3
+grapheme==0.6.0
+joblib==1.3.2
 kiwisolver==1.4.4
-langtable==0.0.62
-libcomps==0.1.18
-libvirt-python==8.6.0
-linear-operator==0.4.0
-lutris==0.5.13
-lxml==4.9.1
-Mako==1.1.4
-MarkupSafe==2.1.1
-matplotlib==3.6.3
-matplotlib-inline==0.1.2
-mercurial==6.2.3
-moddb==0.8.1
-mpmath==1.2.1
-multipledispatch==1.0.0
-munkres==1.1.2
-nest-asyncio==1.5.6
-netCDF4==1.6.0
-networkx==3.0
-nftables==0.1
-numpy==1.24.3
-olefile==0.46
-opt-einsum==3.3.0
-packaging==21.3
+markdown-it-py==3.0.0
+matplotlib==3.7.2
+mdurl==0.1.2
+meshio==5.3.4
+numpy==1.25.2
+packaging==23.1
 pandas==2.0.3
-parso==0.8.3
-Paste==3.5.0
-pexpect==4.8.0
-pickleshare==0.7.5
-pid==2.2.3
-Pillow==9.2.0
-platformdirs==3.9.1
-plotly==5.15.0
-ply==3.11
-productmd==1.35
-prompt-toolkit==3.0.29
-protobuf==3.19.6
-protontricks==1.10.3
-psutil==5.9.5
-ptyprocess==0.6.0
-pure-eval==0.2.2
-pwquality==1.4.5
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pycairo==1.21.0
-pycollada==0.7.2
-pycparser==2.20
-pycrypto==2.6.1
-pycups==2.0.1
-pycurl==7.45.1
-pydicom==2.3.1
-pyenchant==3.2.2
-Pygments==2.12.0
-PyGObject==3.42.2
-pykickstart==3.41
-pyOpenSSL==21.0.0
+Pillow==10.0.0
+Pygments==2.16.1
+pymoo==0.6.0.1
 pyparsing==3.0.9
-pyparted==3.12.0
-pypresence==4.2.1
-PyQt5==5.15.9
-PyQt5-sip==12.11.0
-pyrate-limiter==2.10.0
-pyro-api==0.1.2
-pyro-ppl==1.8.5
-PySide2==5.15.7
-PySocks==1.7.1
-python-augeas==1.1.0
 python-dateutil==2.8.2
-python-meh==0.50
 pytz==2023.3
-pyudev==0.23.2
-pyxdg==0.27
-PyYAML==6.0
-pyzmq==25.1.0
-regex==2022.10.31
-requests==2.28.1
-requests-file==1.5.1
-requests-ftp==0.3.1
-rpm==4.18.1
+rich==13.5.2
+SciencePlots==2.1.0
 scikit-learn==1.3.0
-SciPy==1.8.1
-scour==0.38.2
-selinux==3.5
-sepolicy==3.5
-service-identity==21.1.0
-setools==4.4.0
-shiboken2==5.15.7
-simpleaudio==1.0.4
-simpleline==1.9.0
+scipy==1.11.2
 six==1.16.0
-sos==4.4
-soupsieve==2.3.2.post1
-stack-data==0.3.0
-sympy==1.11.1
-systemd-python==235
-Tempita==0.5.2
-tenacity==8.2.2
-threadpoolctl==3.1.0
-toolz==0.11.2
-torch==2.0.1+cpu
-torchaudio==2.0.2+cpu
-torchvision==0.15.2+cpu
-tornado==6.3.2
-tqdm==4.65.0
-traitlets==5.9.0
-Twisted==22.4.0
-txaio==22.2.1
-typeguard==2.13.3
-typing_extensions==4.4.0
+threadpoolctl==3.2.0
+tqdm==4.66.1
 tzdata==2023.3
-urllib3==1.26.15
-vdf==3.4
-wcwidth==0.2.5
-widgetsnbextension==4.0.8
-xcffib==0.11.1
-zope.event==4.5.0
-zope.interface==5.4.0
+wrapt==1.15.0
