--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,14 +20,15 @@ classifiers = [
 ]
 requires-python = ">=3.8"
 dependencies = [
-  "meshio==5.3.4",
-  "numpy==1.25.2",
-  "netCDF4==1.6.4",
-  "pymoo==0.6.0.1",
-  "scipy==1.11.2",
+  "ipykernel==6.17.1",
   "matplotlib==3.7.3",
+  "meshio==5.3.4",
+  "netCDF4==1.6.4",
+  "numpy==1.25.2",
+  "pymoo==0.6.0.1",
   "SciencePlots==2.1.0",
   "scikit-learn==1.3.0",
+  "scipy==1.11.2",
 ]
 
 [project.urls]
