👷 Use pip3 & python3 explicitly for install & CI

--- a/.github/workflows/build-ci.yml
+++ b/.github/workflows/build-ci.yml
@@ -23,14 +23,14 @@ jobs:
         run: |
           python3 -m venv venv
           . venv/bin/activate
-          pip install build --upgrade
+          pip3 install build --upgrade
           python -m build
-          pip install ./dist/*.whl
+          pip3 install ./dist/*.whl
           
       - name: Run linter
         run: |
           . venv/bin/activate
-          pip install flake8
+          pip3 install flake8
           flake8 . --exclude=venv* --count --select=E9,F63,F7,F82 --show-source --statistics
           flake8 . --exclude=venv* --count --exit-zero --max-complexity=10 --max-line-length=79 --statistics
 
